--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>用户登录</title>
   <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/account.css">
+  <link rel="stylesheet" href="./static/css/account.css">
   <script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
   <script src="//cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
