--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head lang="en">
   <meta charset="UTF-8">
@@ -49,35 +49,43 @@
   <div class="row">
 
     <div class="col-sm-8">
-      <div class="blog-post">
-        <h3 class="blog-post-title"><a href="./item.html">Lorem ipsum dolor sit amet</a></h3>
-        <p class="blog-post-meta">2015年2月3日 标签：<a href="#">Web开发</a></p>
-        <p class="blog-post-content">Amet risus. Dolor ultrices justo, praesent eos nisl lacus, consectetuer vitae lorem
-          cras magna dolor, mauris libero turpis aliquam sed, at sapien tellus penatibus accumsan nec. Parturient amet
-          felis morbi. Quis ac penatibus elementum lacus, vestibulum sem tellus arcu.</p>
+      <!--<div class="blog-post">-->
+        <!--<h3 class="blog-post-title"><a href="./item.html">Lorem ipsum dolor sit amet</a></h3>-->
+        <!--<p class="blog-post-meta">2015年2月3日 标签：<a href="#">Web开发</a></p>-->
+        <!--<p class="blog-post-content">Amet risus. Dolor ultrices justo, praesent eos nisl lacus, consectetuer vitae lorem-->
+          <!--cras magna dolor, mauris libero turpis aliquam sed, at sapien tellus penatibus accumsan nec. Parturient amet-->
+          <!--felis morbi. Quis ac penatibus elementum lacus, vestibulum sem tellus arcu.</p>-->
+      <!--</div>-->
+
+      <!--<hr>-->
+
+      <!--<div class="blog-post">-->
+        <!--<h3 class="blog-post-title"><a href="./item.html">Vel volutpat dictum sagittis lacus</a></h3>-->
+        <!--<p class="blog-post-meta">2015年2月3日 标签：<a href="#">Linux</a></p>-->
+        <!--<p class="blog-post-content">Morbi pede vestibulum, nisl orci suspendisse. Amet erat gravida fringilla aliquam-->
+          <!--metus, dui vitae cras metus varius etiam tempus, in et. Dui venenatis dolor, amet magna facilisis, fames ut-->
+          <!--imperdiet eros ut ligula justo, et non viverra a viverra mollis, arcu gravida. Fermentum eu erat, eros enim-->
+          <!--nulla vivamus praesent hymenaeos dui. Sollic.</p>-->
+      <!--</div>-->
+
+      <!--<hr>-->
+
+      <!--<div class="blog-post">-->
+        <!--<h3 class="blog-post-title"><a href="./item.html">Donec mauris nullam praesent eget</a></h3>-->
+        <!--<p class="blog-post-meta">2015年2月3日 标签：<a href="#">Web开发</a></p>-->
+        <!--<p class="blog-post-content">Laoreet magna sit gravida eu neque, erat porttitor aenean iaculis leo ac, aliquam-->
+          <!--commodo malesuada ullamcorper, iaculis interdum quam, dui tortor id. Convallis felis nunc condimentum.</p>-->
+      <!--</div>-->
+
+      <!--<hr>-->
+
+      <div class="blog-post" th:each="myblog: ${bloglists}">
+        <h3 class="blog-post-title"><a th:text="${myblog.title}" th:href="@{'/blogs/' + ${myblog.id}}"></a></h3>
+        <p class="blog-post-meta"><span th:text="${#dates.format(myblog.createdTime, 'yyyy-MM-dd')}"></span> 标签：<a href="#">Web开发</a></p>
+        <p class="blog-post-content"><a th:text="${myblog.content}">My name is Jibo</a></p>
+        <hr>
       </div>
 
-      <hr>
-
-      <div class="blog-post">
-        <h3 class="blog-post-title"><a href="./item.html">Vel volutpat dictum sagittis lacus</a></h3>
-        <p class="blog-post-meta">2015年2月3日 标签：<a href="#">Linux</a></p>
-        <p class="blog-post-content">Morbi pede vestibulum, nisl orci suspendisse. Amet erat gravida fringilla aliquam
-          metus, dui vitae cras metus varius etiam tempus, in et. Dui venenatis dolor, amet magna facilisis, fames ut
-          imperdiet eros ut ligula justo, et non viverra a viverra mollis, arcu gravida. Fermentum eu erat, eros enim
-          nulla vivamus praesent hymenaeos dui. Sollic.</p>
-      </div>
-
-      <hr>
-
-      <div class="blog-post">
-        <h3 class="blog-post-title"><a href="./item.html">Donec mauris nullam praesent eget</a></h3>
-        <p class="blog-post-meta">2015年2月3日 标签：<a href="#">Web开发</a></p>
-        <p class="blog-post-content">Laoreet magna sit gravida eu neque, erat porttitor aenean iaculis leo ac, aliquam
-          commodo malesuada ullamcorper, iaculis interdum quam, dui tortor id. Convallis felis nunc condimentum.</p>
-      </div>
-
-      <hr>
 
       <nav>
         <ul class="pager">
