--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
+
 
 <head lang="en">
   <meta charset="UTF-8">
