--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -56,16 +56,16 @@
 
       <form class="form-create-blog" method="post">
         <div class="form-group">
-          <!--<label for="title">标题</label>-->
-          <input type="text" name="title" class="form-control" placeholder="文章的标题" autofocus="">
+          <label for="title">标题</label>
+          <input type="text" name="title" class="form-control" id="title" placeholder="文章的标题" autofocus="">
         </div>
         <div class="form-group">
-          <!--<label for="title">标签</label><p>-->
-          <input type="text" name="tags" class="form-control" placeholder="标签" autofocus="">
+          <label for="tags">标签</label><p>
+          <input type="text" name="tags" class="form-control" id="tags" placeholder="标签" autofocus="">
         </div>
         <div class="form-group">
-          <!--<label for="content">内容</label>-->
-          <textarea name="content" class="form-control" placeholder="文章的内容" rows="18"></textarea>
+          <label for="content">内容</label>
+          <textarea name="content" class="form-control" id="content" placeholder="文章的内容" rows="18"></textarea>
         </div>
         <button type="submit" class="btn pull-right btn-primary">保存</button>
       </form>
