--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -54,7 +54,7 @@
 
     <div class="col-sm-8">
 
-      <form class="form-create-blog" method="post">
+      <form class="form-create-blog" action="/blogs" method="post">
         <div class="form-group">
           <label for="title">标题</label>
           <input type="text" name="title" class="form-control" id="title" placeholder="文章的标题" autofocus="">
